# python-spicyids

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  setup.cfg  setup.py.dep
spicy_ids/: __init__.py  generate_random_strings.py  generate_spicy_id.py  generate_timestamp_value.py  get_object_values.py  spicy_id.py
spicy_ids/tests/: support.txt  test_generate_random_strings.py  test_get_object_values.py  test_get_times.py  test_spicy_id.py
spicy_ids/utils/: __init__.py
src/: __init__.py  generate_random_strings.py  generate_spicy_id.py  generate_timestamp_value.py  get_object_values.py  spicy_id.py
src/spicyid/: __init__.py  generate_random_strings.py  generate_spicy_id.py  generate_timestamp_value.py  get_object_values.py  spicy_id.py
src/tests/: test_generate_random_strings.py  test_get_object_values.py  test_get_times.py  test_spicy_id.py
src/utils/: __init__.py
