[metadata]
name = spicyid
version = 1.0.0
author = The Darkest Abed
author_email = thedarkestabed@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/DarkestAbed/python-spicyids
project_urls =
    Bug Tracker = https://github.com/DarkestAbed/python-spicyids/issues
    repository = https://github.com/DarkestAbed/python-spicyids
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: The Unlicense (Unlicense)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src